--- a/aboutme.html
+++ b/aboutme.html
@@ -58,7 +58,7 @@
         <h1 class="lg-heading">About <span class="text-secondary">Me</span></h1>
         <h2 class="sm-heading">Let me tell you a few things...</h2>
         <div class="about-info">
-            <img src="../dist/img/portrait.jpeg" alt="Aniket Ray" class="bio-image">
+            <img src="./img/portrait.jpeg" alt="Aniket Ray" class="bio-image">
             <div class="bio">
                 <h3 class="text-secondary">Bio</h3>
                 <p class="about-main">
