--- a/mywork.html
+++ b/mywork.html
@@ -68,7 +68,7 @@
         <div class="pg-under-const">Page Under Construction</div>
     </main>
     <footer id="main-footer">
-        Copyright &copy; 2018
+        &copy; Aniket Ray | 2019
     </footer>
     <script src="js/main.js"></script>
 </body>
