Added footer on Index Page

--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
             </a>
         </div>
     </main>
+    <footer id="main-footer">
+        &copy; Aniket Ray | 2019
+    </footer>
     <script src="js/main.js"></script>
 </body>
 
