--- a/aboutme.html
+++ b/aboutme.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
@@ -70,9 +78,23 @@
             <div class="bio">
                 <h3 class="text-secondary">Bio</h3>
                 <p class="about-main">
-                <p class="about-main">Hi ! I am Aniket Ray, a freshman student at <span class="text-secondary">National Institute of Technology</span>, <span class="text-secondary">Durgapur</span> pursuing Bachelors in Computer Science and Engineering.</p>
-                <p class="about-main">I primarily use <span class="text-secondary">C++</span> and <span class="text-secondary">Python</span>, but picking up a new language isn’t a problem for me. My interest lies in <span class="text-secondary">Deep Neural Networks</span>, <span class="text-secondary">Artificial Intelligence</span>, <span class="text-secondary">Applied Cryptography</span> and <span class="text-secondary">Machine Learning</span>. I’m quite familiar with developing on the frontend and backend as well and I’ve used quite a lot of <span class="text-secondary">HTML5</span>, <span class="text-secondary">CSS3</span>, <span class="text-secondary">JavaScript</span>, <span class="text-secondary">Django</span> and <span class="text-secondary">SASS</span>. Coding this website is one my projects. Recently, I’ve been working on <span class="text-secondary">iOS Development</span> using <span class="text-secondary">Swift</span>. Also I’m “obsessed” with automating tasks using <span class="text-secondary">BASH</span> Scripting. <i class="fas fa-grin-tongue"></i> </p>
-                <p class="about-main">Also, a music Lover and a Cricket Enthusiast.</p>
+                    <p class="about-main">Hi ! I am Aniket Ray, a freshman student at <span
+                            class="text-secondary">National Institute of Technology</span>, <span
+                            class="text-secondary">Durgapur</span> pursuing Bachelors in Computer Science and
+                        Engineering.</p>
+                    <p class="about-main">I primarily use <span class="text-secondary">C++</span> and <span
+                            class="text-secondary">Python</span>, but picking up a new language isn’t a problem for me.
+                        My interest lies in <span class="text-secondary">Deep Neural Networks</span>, <span
+                            class="text-secondary">Artificial Intelligence</span>, <span class="text-secondary">Applied
+                            Cryptography</span> and <span class="text-secondary">Machine Learning</span>. I’m quite
+                        familiar with developing on the frontend and backend as well and I’ve used quite a lot of <span
+                            class="text-secondary">HTML5</span>, <span class="text-secondary">CSS3</span>, <span
+                            class="text-secondary">JavaScript</span>, <span class="text-secondary">Django</span> and
+                        <span class="text-secondary">SASS</span>. Coding this website is one my projects. Recently, I’ve
+                        been working on <span class="text-secondary">iOS Development</span> using <span
+                            class="text-secondary">Swift</span>. Also I’m “obsessed” with automating tasks using <span
+                            class="text-secondary">BASH</span> Scripting. <i class="fas fa-grin-tongue"></i> </p>
+                    <p class="about-main">Also, a music Lover and a Cricket Enthusiast.</p>
 
                 </p>
             </div>
