--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,14 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
-    
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106941388-2"></script>
     <script>
@@ -75,7 +82,9 @@
                 <span class="text-secondary">Phone: </span>(+91) 91265-71677
             </div>
             <div>
-                <span class="text-secondary">Address: </span> <a href="https://www.google.com/maps/@?api=1&map_action=map&center=23.544501,87.288690&zoom=18" target="_blank">342, Hall 11, NIT Durgapur, Durgapur, IN</a>
+                <span class="text-secondary">Address: </span> <a
+                    href="https://www.google.com/maps/@?api=1&map_action=map&center=23.544501,87.288690&zoom=18"
+                    target="_blank">342, Hall 11, NIT Durgapur, Durgapur, IN</a>
             </div>
         </div>
     </main>
