Changed from freshman to sophomore

--- a/aboutme.html
+++ b/aboutme.html
@@ -78,7 +78,7 @@
             <div class="bio">
                 <h3 class="text-secondary">Bio</h3>
                 <p class="about-main">
-                    <p class="about-main">Hi ! I am Aniket Ray, a freshman student at <span
+                    <p class="about-main">Hi ! I am Aniket Ray, a sophomore student at <span
                             class="text-secondary">National Institute of Technology</span>, <span
                             class="text-secondary">Durgapur</span> pursuing Bachelors in Computer Science and
                         Engineering.</p>
