--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <a href="https://www.quora.com/profile/Aniket-Ray-38" target="_blank">
                 <i class="fab fa-quora fa-2x"></i>
             </a>
-            <a href="https://wa.me/14085716463?text=Hello!%20I%20am" target="_blank">
+            <a href="https://wa.me/919126571677text=Hello!%20I%20am" target="_blank">
                 <i class="fab fa-whatsapp fa-2x"></i>
             </a>
         </div>
