--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </header>
     <main id="home">
         <h1 class="lg-heading">Aniket <span class="text-secondary">Ray</span></h1>
-        <h2 class="sm-heading">Freshman Student, Computer Science Undergrad, Programmer</h2>
+        <h2 class="sm-heading">Sophomore Student, Computer Science Undergrad, Programmer</h2>
         <div class="icons">
             <a href="https://www.twitter.com/aniketiq" target="_blank">
                 <i class="fab fa-twitter fa-2x"></i>
