--- a/contact.html
+++ b/contact.html
@@ -83,8 +83,8 @@
             </div>
             <div>
                 <span class="text-secondary">Address: </span> <a
-                    href="https://www.google.com/maps/@?api=1&map_action=map&center=23.544501,87.288690&zoom=18"
-                    target="_blank">342, Hall 11, NIT Durgapur, Durgapur, IN</a>
+                    href="https://www.google.com/maps/@?api=1&map_action=map&center=23.5469122,87.2902513&zoom=18"
+                    target="_blank">315 (Central Block), Hall 1, NIT Durgapur, Durgapur, IN</a>
             </div>
         </div>
     </main>
