--- a/aboutme.html
+++ b/aboutme.html
@@ -92,8 +92,8 @@
                             class="text-secondary">JavaScript</span>, <span class="text-secondary">Django</span> and
                         <span class="text-secondary">SASS</span>. Coding this website is one my projects. Recently, I’ve
                         been working on <span class="text-secondary">iOS Development</span> using <span
-                            class="text-secondary">Swift</span>. Also I’m “obsessed” with automating tasks using <span
-                            class="text-secondary">BASH</span> Scripting. <i class="fas fa-grin-tongue"></i> </p>
+                            class="text-secondary">Swift</span>. Also I’m comfortable with automating tasks using <span
+                            class="text-secondary">BASH</span> Scripting. </p>
                     <p class="about-main">Also, a music Lover and a Cricket Enthusiast.</p>
 
                 </p>
