--- a/aboutme.html
+++ b/aboutme.html
@@ -58,8 +58,8 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="about:blank" class="nav-link" target="_blank">
-                        Résumé
+                    <a href="https://drive.google.com/file/d/1trsRAIJ191w22FTNi6wHShEDvgcB6sjG/view?usp=sharing" class="nav-link" target="_blank">
+                        Resume
                     </a>
                 </li>
                 <li class="nav-item">
