--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="https://drive.google.com/file/d/1trsRAIJ191w22FTNi6wHShEDvgcB6sjG/view?usp=sharing" class="nav-link" target="_blank">
+                    <a href="https://drive.google.com/file/d/12nZciZuHjWsNKKpsh1JYBZ5kgy2mXMZI/view?usp=sharing" class="nav-link" target="_blank">
                         Resume
                     </a>
                 </li>
@@ -89,7 +89,7 @@
             <a href="https://www.quora.com/profile/Aniket-Ray-38" target="_blank">
                 <i class="fab fa-quora fa-2x"></i>
             </a>
-            <a href="https://wa.me/919126571677text=Hello!%20I%20am" target="_blank">
+            <a href="https://wa.me/919126571677" target="_blank">
                 <i class="fab fa-whatsapp fa-2x"></i>
             </a>
         </div>
