--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                             </h1>
                                             <h2 class="a-header  c-brand__sub-title  t-sub-title">
                                                 <span class="c-brand__sizer">
-                                                    Web Developer &amp; Front-end Expert
+                                                    Junior Undergrad Student &amp; Freelancer
                                                 </span>
                                             </h2>
                                         </div>
@@ -639,7 +639,7 @@
                                                     GitHub
                                                 </h3>
                                                 <p>
-                                                    All my open source projects for you analyze.
+                                                    All my open source projects.
                                                 </p>
                                             </div>
                                         </div>
@@ -662,7 +662,7 @@
                                                     Research Gate
                                                 </h3>
                                                 <p>
-                                                    An overview of the themes and templates that I sell.
+                                                    Connecting with Scientists and Researchers.
                                                 </p>
                                             </div>
                                         </div>
@@ -686,7 +686,7 @@
                                                     Medium
                                                 </h3>
                                                 <p>
-                                                    Yes. I'm also a blogger and here you find my writings.
+                                                    Writing some techy stuffs. Feel free to check out.
                                                 </p>
                                             </div>
                                         </div>
@@ -708,7 +708,7 @@
                                                     Twitter
                                                 </h3>
                                                 <p>
-                                                    Whenever a design is finalized, it lands right here.
+                                                    An inactive instance of my online presence.
                                                 </p>
                                             </div>
                                         </div>
@@ -754,7 +754,7 @@
                                                     Facebook
                                                 </h3>
                                                 <p>
-                                                    A place for my sketches and drawings.
+                                                    A place for sharing memes.
                                                 </p>
                                             </div>
                                         </div>
@@ -928,16 +928,16 @@
 
                                 <ul class="c-footer__social-buttons  c-social-buttons  o-content__body">
                                     <li class="a-footer">
-                                        <a href="https://www.facebook.com/RuvenThemes/" target="_blank"
+                                        <a href="https://www.github.com/aniketiq/" target="_blank"
                                             class="c-social-button  t-social-button">
-                                            <i class="fab  fa-lg  fa-facebook-f"></i>
+                                            <i class="fab  fa-lg  fa-github"></i>
                                         </a>
                                     </li>
 
                                     <li class="a-footer">
-                                        <a href="https://twitter.com/_Ruven" target="_blank"
+                                        <a href="https://drive.google.com/file/d/12nZciZuHjWsNKKpsh1JYBZ5kgy2mXMZI/view" target="_blank"
                                             class="c-social-button  t-social-button">
-                                            <i class="fab  fa-lg  fa-twitter"></i>
+                                            <i class="fab  fa-lg  fa-google-drive"></i>
                                         </a>
                                     </li>
                                 </ul>
