--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                 <div class="o-content__body">
                                     <p>
                                         Hi! I'm Aniket, a Junior Undergrad student at the National Institute of Technology
-                                        Durgapur. My primary interests lie in Machine Learning and Distributed Systems.
+                                        Durgapur. My primary interests lie in <a>Machine Learning</a> and <a>Distributed Systems</a>.
                                         Working as a part-time Freelancer provided me the experience of a
                                         Web Developer too. I see myself as a researcher in the upcoming years.
                                     </p>
