--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                                 <div class="o-content__body">
                                                     <h4>Phone</h4>
                                                     <p>
-                                                        (+91) 91265-71677
+                                                        <a href="https://wa.me/14084131484">(+1) 408-413-1484</a>
                                                     </p>
                                                 </div>
                                             </div>
@@ -177,7 +177,6 @@
                                         Working as a part-time Freelancer provided me the experience of a
                                         Web Developer too. I see myself as a researcher in the upcoming years.
                                     </p>
-                                    
                                 </div>
                             </div>
                         </div>
@@ -814,7 +813,7 @@
                                         <div class="o-content__body">
                                             <h4>Phone</h4>
                                             <p>
-                                                (+91) 91265-71677
+                                                <a href="https://wa.me/14084131484">(+1) 408-413-1484</a>
                                             </p>
                                         </div>
                                     </div>
