--- a/index.html
+++ b/index.html
@@ -112,10 +112,14 @@
                                         <div class="o-grid__col-md-3  o-grid__col-sm-6">
                                             <div class="a-header  o-content">
                                                 <div class="o-content__body">
-                                                    <h4>Phone</h4>
-                                                    <p>
-                                                        <a href="https://wa.me/14084131484">(+1) 408-413-1484</a>
-                                                    </p>
+                                                    <a href="https://wa.me/14084131484" class="t-link-container">
+                                                        <h4>Phone</h4>
+                                                        <p>
+                                                            <span class="t-link-container__item--blended">
+                                                                (+1) 408-413-1484
+                                                            </span>
+                                                        </p>
+                                                    </a>
                                                 </div>
                                             </div>
                                         </div>
@@ -811,10 +815,14 @@
                                 <div class="o-grid__col-md-3  o-grid__col-sm-6">
                                     <div class="o-content">
                                         <div class="o-content__body">
-                                            <h4>Phone</h4>
-                                            <p>
-                                                <a href="https://wa.me/14084131484">(+1) 408-413-1484</a>
-                                            </p>
+                                            <a href="https://wa.me/14084131484" class="t-link-container">
+                                                <h4>Phone</h4>
+                                                <p>
+                                                    <span class="t-link-container__item--blended">
+                                                        (+1) 408-413-1484
+                                                    </span>
+                                                </p>
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
