--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                                         <h4>Phone</h4>
                                                         <p>
                                                             <span class="t-link-container__item--blended">
-                                                                (+1) 408-413-1484
+                                                                (+1)&nbsp; 408-413-1484
                                                             </span>
                                                         </p>
                                                     </a>
@@ -819,7 +819,7 @@
                                                 <h4>Phone</h4>
                                                 <p>
                                                     <span class="t-link-container__item--blended">
-                                                        (+1) 408-413-1484
+                                                        (+1)&nbsp; 408-413-1484
                                                     </span>
                                                 </p>
                                             </a>
