--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="assets/plugins/nivo-lightbox/themes/default/default.css" />
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/themes.dark.css">
+    <link rel="icon" href="assets/images/favicon.ico">
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/dense.js"></script>
     <script src="assets/plugins/nivo-lightbox/nivo-lightbox.min.js"></script>
@@ -77,6 +78,12 @@
                                     </div>
                                     <ul class="c-header__social-buttons  c-social-buttons">
                                         <li class="a-header">
+                                            <a href="https://wa.me/14084131484" target="_blank"
+                                                class="c-social-button  t-social-button">
+                                                <i class="fab fa-lg fa-whatsapp"></i>
+                                            </a>
+                                        </li>
+                                        <li class="a-header">
                                             <a href="https://www.github.com/aniketiq/" target="_blank"
                                                 class="c-social-button  t-social-button">
                                                 <i class="fab  fa-lg  fa-github"></i>
@@ -94,6 +101,7 @@
                                                 <i class="fab fa-lg fa-google-drive"></i>
                                             </a>
                                         </li>
+
                                     </ul>
                                 </div>
                                 <div class="c-header__contact">
@@ -112,11 +120,11 @@
                                         <div class="o-grid__col-md-3  o-grid__col-sm-6">
                                             <div class="a-header  o-content">
                                                 <div class="o-content__body">
-                                                    <a href="https://wa.me/14084131484" class="t-link-container">
+                                                    <a href="tel:+14245066139" class="t-link-container">
                                                         <h4>Phone</h4>
                                                         <p>
                                                             <span class="t-link-container__item--blended">
-                                                                (+1)&nbsp; 408-413-1484
+                                                                (+1)&nbsp; 424-506-6139
                                                             </span>
                                                         </p>
                                                     </a>
@@ -126,11 +134,11 @@
                                         <div class="o-grid__col-md-3  o-grid__col-sm-6">
                                             <div class="a-header  o-content">
                                                 <div class="o-content__body">
-                                                    <a href="https://aniketiq.github.io/" class="t-link-container">
+                                                    <a href="https://www.aniketiq.me/" class="t-link-container">
                                                         <h4>Website</h4>
                                                         <p>
                                                             <span class="t-link-container__item--blended">
-                                                                aniketiq.github.io
+                                                                aniketiq.me
                                                             </span>
                                                         </p>
                                                     </a>
@@ -140,11 +148,11 @@
                                         <div class="o-grid__col-md-3  o-grid__col-sm-6">
                                             <div class="a-header  o-content">
                                                 <div class="o-content__body">
-                                                    <a href="mailto:aniketiq@gmail.com" class="t-link-container">
+                                                    <a href="mailto:aniketray@aniketiq.me" class="t-link-container">
                                                         <h4>Email</h4>
                                                         <p>
                                                             <span class="t-link-container__item--blended">
-                                                                aniketiq@gmail.com
+                                                                aniketray@aniketiq.me
                                                             </span>
                                                         </p>
                                                     </a>
@@ -176,8 +184,10 @@
                             <div class="c-intro">
                                 <div class="o-content__body">
                                     <p>
-                                        Hi! I'm Aniket, a Junior Undergrad student at the National Institute of Technology
-                                        Durgapur. My primary interests lie in <a>Machine Learning</a> and <a>Distributed Systems</a>.
+                                        Hi! I'm Aniket, a Junior Undergrad student at the National Institute of
+                                        Technology
+                                        Durgapur. My primary interests lie in <a>Machine Learning</a> and <a>Distributed
+                                            Systems</a>.
                                         Working as a part-time Freelancer provided me the experience of a
                                         Web Developer too. I see myself as a researcher in the upcoming years.
                                     </p>
@@ -815,11 +825,11 @@
                                 <div class="o-grid__col-md-3  o-grid__col-sm-6">
                                     <div class="o-content">
                                         <div class="o-content__body">
-                                            <a href="https://wa.me/14084131484" class="t-link-container">
+                                            <a href="tel:+14245066139" class="t-link-container">
                                                 <h4>Phone</h4>
                                                 <p>
                                                     <span class="t-link-container__item--blended">
-                                                        (+1)&nbsp; 408-413-1484
+                                                        (+1)&nbsp; 424-506-6139
                                                     </span>
                                                 </p>
                                             </a>
@@ -830,11 +840,11 @@
                                 <div class="o-grid__col-md-3  o-grid__col-sm-6">
                                     <div class="o-content">
                                         <div class="o-content__body">
-                                            <a href="https://aniketiq.github.io/" class="t-link-container">
+                                            <a href="https://www.aniketiq.me/" class="t-link-container">
                                                 <h4>Website</h4>
                                                 <p>
                                                     <span class="t-link-container__item--blended">
-                                                        aniketiq.github.io
+                                                        aniketiq.me
                                                     </span>
                                                 </p>
                                             </a>
@@ -845,12 +855,11 @@
                                 <div class="o-grid__col-md-3  o-grid__col-sm-6">
                                     <div class="o-content">
                                         <div class="o-content__body">
-                                            <a href="mailto:aniketiq@gmail.com" target="_blank"
-                                                class="t-link-container">
+                                            <a href="mailto:aniketray@aniketiq.me" class="t-link-container">
                                                 <h4>Email</h4>
                                                 <p>
                                                     <span class="t-link-container__item--blended">
-                                                        aniketiq@gmail.com
+                                                        aniketray@aniketiq.me
                                                     </span>
                                                 </p>
                                             </a>
@@ -885,6 +894,12 @@
                                 </div>
 
                                 <ul class="c-footer__social-buttons  c-social-buttons  o-content__body">
+                                    <li class="a-header">
+                                        <a href="https://wa.me/14084131484" target="_blank"
+                                            class="c-social-button  t-social-button">
+                                            <i class="fab fa-lg fa-whatsapp"></i>
+                                        </a>
+                                    </li>
                                     <li class="a-footer">
                                         <a href="https://www.github.com/aniketiq/" target="_blank"
                                             class="c-social-button  t-social-button">
